[gd_scene load_steps=5 format=3 uid="uid://bwauuemc10o6x"]

[ext_resource type="Script" uid="uid://coscvc1h5bxok" path="res://scripts/minigames/minigame_1.gd" id="1_3iif4"]
[ext_resource type="PackedScene" uid="uid://v8eg0wvcs4ea" path="res://scenes/Minigames/Level_1.tscn" id="1_fqtu4"]
[ext_resource type="Texture2D" uid="uid://bhhr6i7ouguuq" path="res://assets/kabel_background.png" id="2_3iif4"]
[ext_resource type="PackedScene" uid="uid://dinkb6rvbmkhj" path="res://scenes/helpsys.tscn" id="4_60nk1"]

[node name="Minigame1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3iif4")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.389058, 0.421474, 0.446514, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3iif4")

[node name="Level1" parent="." instance=ExtResource("1_fqtu4")]
layout_mode = 1

[node name="Check_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 922.0
offset_top = 546.0
offset_right = 1070.0
offset_bottom = 577.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "Strom überprüfen"
flat = true

[node name="ColorRect" type="ColorRect" parent="Check_Button"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.915667, 1, 0.54, 1)

[node name="Helpsys" parent="." instance=ExtResource("4_60nk1")]
layout_mode = 1
offset_left = 1151.0
offset_top = 3.0
offset_right = -1.0
offset_bottom = -645.0
hint_1_text = "\"mindestens eins\" muss ein Eingangssignal bekommen, um es weiter zu leiten."
hint_2_text = "\"beides\" muss beide Eingangssignale bekommen, um es weiter zu leiten."
hint_3_text = "Probiere verschiedene Quellen anzuschalten, bis die Lampe leuchtet."
Timer_hint_2_time = 2.0
Timer_hint_3_time = 60.0

[connection signal="ziel_input_false" from="Level1" to="." method="_on_level_1_ziel_input_false"]
[connection signal="ziel_input_true" from="Level1" to="." method="_on_level_1_ziel_input_true"]
[connection signal="pressed" from="Check_Button" to="." method="_on_check_button_pressed"]
